syntax = "proto3";

package uniswap.types.v1;

message Tokens {
  repeated Token tokens = 1;
}

message Token {
  bytes address = 1;
  string symbol = 2;
  string name = 3;
  uint64 decimals = 4;
}

message Pairs {
  repeated Pair pairs = 1;
}

message Pair {
  uint64 ordinal = 1;
  bytes address = 2;
  bytes token0 = 3;
  bytes token1 = 4;
}

message Reserves {
  repeated Reserve reserves = 1;
}

message Reserve {
  uint64 ordinal = 1;
  bytes pair = 2;
  string reserve0 = 3;
  string reserve1 = 4;
  string token0_price = 5;
  string token1_price = 6;
}